Endgame: Singularity Changelog

V1.XX (YYYY.YY.YY):

USER-VISIBLE CHANGES:
- The game now requires `polib`. Previously, we had an embedded
  copy as fallback. However, it did not work with python3.11.
- The hotkey `F5` is now "quicksave" rather than "reload theme".
  (Reload theme is now `F6`). The "quicksave" is a new feature,
  but sadly does not provide any feedback on success for now.
- Save games are now ordered by time (most recent first) rather
  than name. This makes it easier to find the latest savegame.

V1.00 (2020.07.02):

GAME CONTENT CHANGES:
- Locations with higher risk are now highlighted provided the
  relevant techs have been researched.  (nthykier)
- Add a new power state `Offline`, which applies to all bases
  under construction until they can become `Active`.  Bases in
  the `Offline` state currently behave like they are in the
  `Sleep` state.  Based on an idea from Wuzzy2 (Closes: #239,
  #245) (Xenega)
- The thrift modification from locations now also applies to
  CPU maintenance.  (Xenega)

USER-VISIBLE CHANGES:
- Support better translations of strings involving numbers
  such as "X Days" or "Y Hours".  (Closes: #262)  (gunchleoc)
- Fix a visual glitch in the ResearchScreen if the AI had no
  available CPU because all bases are asleep.  (nthykier)
- It is now possible to convert old savegames to the new format
  via the `Upgrade` button on the `Load` menu.  This avoids the
  hassle of having to manually load and save each game.
  (nthykier)
- Implement lexicographic sorting of strings by using Python's
  `locale.strxfrm`.  This provides better sorting order for
  non-English languages on all platforms where `locale.strxfrm`
  works.  Notable exception being MacOS, where Python is
  reported to have issues still.  (Closes: #271)  (gunchleoc)
- Add support for mouse-wheel scrolling in pygame 2 with SDL 2,
  which re-enables scrolling in lists.  (nthykier)
- Rewrite handling of "holding down key" to repeat a key press.